--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
+    "build": "node-sass --output-style compressed main.scss main.css",
     "sass": "node-sass -w main.scss main.css",
     "serve": "browser-sync start --server ./ --files *.html,*.css",
     "test": "echo \"Error: no test specified\" && exit 1"
