--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   "homepage": "https://github.com/dillonchr/typosdotcom#readme",
   "dependencies": {
     "browser-sync": "^2.18.8",
-    "node-sass": "^4.5.2"
+    "node-sass": "^4.5.2",
+    "reflex-grid": "^1.5.0"
   }
 }
