--- a/package.json
+++ b/package.json
@@ -22,7 +22,6 @@
   "homepage": "https://github.com/dillonchr/typosdotcom#readme",
   "dependencies": {
     "browser-sync": "^2.18.8",
-    "node-sass": "^4.5.2",
-    "reflex-grid": "^1.5.0"
+    "node-sass": "^4.5.2"
   }
 }
